--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
-    <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>zirec.lol</title>
     <meta charset="UTF-8">
-    <style>
-        body {
-            background-color: black;
-            color: white;
-            font-family: Arial; /* Ensures text is in monospaced font */
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <pre>
---[[
-website text here (sigma??)
-]]
-    </pre>
+    <div class="login-container">
+        <h1>Login</h1>
+        <form id="loginForm">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit">Login</button>
+        </form>
+        <div id="message"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
