--- a/index.html
+++ b/index.html
@@ -3,103 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebSocket Client</title>
+    <title>Hidden Script</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            height: 100vh;
+            overflow: hidden;
+            position: relative;
+        }
+        #overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8); /* Black overlay with opacity */
+            z-index: 1000; /* Ensure it covers everything */
+        }
+        #script-container {
+            display: none;
+            position: absolute;
+            top: 10px;
+            left: 10px;
             background-color: #f4f4f4;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-        }
-
-        #log {
-            width: 100%;
-            max-width: 600px;
-            height: 300px;
-            overflow-y: scroll;
+            padding: 10px;
             border: 1px solid #ddd;
-            padding: 10px;
-            background-color: white;
-            margin-bottom: 20px;
-        }
-
-        #messageForm {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            max-width: 600px;
-        }
-
-        #message {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-
-        button {
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
+            z-index: 2000; /* Ensure it's above the overlay */
+            white-space: pre; /* Preserve spaces and line breaks */
         }
     </style>
 </head>
 <body>
-    <h1>WebSocket Client</h1>
-    <div id="log"></div>
-    <form id="messageForm">
-        <input type="text" id="message" placeholder="Type a message" required>
-        <button type="submit">Send</button>
-    </form>
+    <div id="overlay"></div>
+    <div id="script-container"></div>
+
     <script>
-        const logElement = document.getElementById('log');
-        const messageForm = document.getElementById('messageForm');
-        const messageInput = document.getElementById('message');
-
-        // Replace this URL with your WebSocket server URL
-        const wsUrl = 'ws://localhost:8080';
-        const ws = new WebSocket(wsUrl);
-
-        ws.onopen = () => {
-            log('WebSocket connection opened.');
-        };
-
-        ws.onmessage = (event) => {
-            log('Received: ' + event.data);
-        };
-
-        ws.onclose = () => {
-            log('WebSocket connection closed.');
-        };
-
-        ws.onerror = (error) => {
-            log('WebSocket error: ' + error.message);
-        };
-
-        messageForm.addEventListener('submit', (event) => {
-            event.preventDefault();
-            const message = messageInput.value;
-            ws.send(message);
-            log('Sent: ' + message);
-            messageInput.value = '';
+        // JavaScript to handle script content visibility
+        document.addEventListener('DOMContentLoaded', () => {
+            // Script content
+            const scriptText = 'print("hello world")';
+            // This can be used if you want to dynamically display or process it
+            console.log('Script loaded but hidden');
+            // If you need to show it in Roblox, use it in a fetch request or similar method.
         });
-
-        function log(message) {
-            const p = document.createElement('p');
-            p.textContent = message;
-            logElement.appendChild(p);
-            logElement.scrollTop = logElement.scrollHeight;
-        }
     </script>
 </body>
 </html>
